# CRTX

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  crtx_disclosure_scan.sh  crtx_review_code_extension.md  debug-bundle.txt  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  triad-review.yml
api/: auth.py  main.py  models.py  requirements.txt
crtx/: __init__.py  arbiter.py  config.py  loop.py  memory.py  providers.py  router.py
debug-dump/: cli_streaming_display.py  defaults.toml  health.py  session.json  summary.md
debug-dump/code/: .gitignore  README.md  __init__.py  __main__.py  base.py  cli.py  exceptions.py  google_quota.py  pyproject.toml  status.py  untitled.txt
debug-dump/reviews/: review_1_architect.md  review_2_verify.md
docs/: arbiter.md  architecture.md  audit.md  build-spec (1).md  build-spec (2).md  build-spec.md  collective.md  model-agnostic.md  planner.md  sdk-map.md  vision.md
examples/: cli_tool.md  data_pipeline.md  refactor_legacy.md  rest_api.md  websocket_chat.md
supabase/migrations/: 001_pro_dashboard.sql  002_analytics_views.sql
tests/: test_apply_conflict.py  test_apply_diff.py  test_apply_engine.py  test_apply_git.py  test_apply_patcher.py  test_apply_resolver.py  test_apply_schemas.py  test_apply_verify.py  test_arbiter.py  test_ci.py  test_cli.py  test_cli_display.py  test_config_loader.py  test_consensus.py  test_context.py  test_dashboard.py  test_debate.py  test_demo.py  test_litellm_provider.py  test_memory.py  test_orchestrator.py  test_orchestrator_arbiter.py  test_output.py  test_parallel.py  test_persistence.py  test_planner.py  test_post_run_viewer.py  test_presets.py  test_pro_agent.py  test_prompt_loader.py  test_provider_base.py  test_repl.py  test_review_command.py  test_review_improve.py  test_routing.py  test_schemas_arbiter.py  test_schemas_messages.py  test_schemas_pipeline.py  test_schemas_reconciliation.py  test_sdk_import.py  (+3 more)
triad/: __init__.py  cli.py  cli_display.py  cli_streaming_display.py  demo.py  keys.py  orchestrator.py  planner.py  post_run_viewer.py  presets.py  repl.py
triad/apply/: __init__.py  conflict.py  diff.py  engine.py  git.py  patcher.py  resolver.py  verify.py
triad/arbiter/: __init__.py  arbiter.py  feedback.py  reconciler.py
triad/benchmark/: __init__.py  prompts.py  reporter.py  runner.py  scorer.py  single_model.py
triad/ci/: __init__.py  formatter.py  reviewer.py
triad/config/: defaults.toml  models.toml  routing.toml
triad/consensus/: __init__.py  protocol.py  suggestions.py  voting.py
triad/context/: __init__.py  builder.py  pruner.py  scanner.py
triad/dashboard/: __init__.py  events.py  server.py
triad/dashboard/static/: index.html
triad/loop/: __init__.py  fixer.py  generator.py  orchestrator.py  presenter.py  reviewer.py  router.py  test_runner.py
triad/memory/: __init__.py  cli.py  decision_log.py  memory.py  patterns.py  schema.py  taxonomy.py
triad/output/: __init__.py  renderer.py  writer.py
triad/persistence/: __init__.py  database.py  export.py  session.py
triad/pro/: __init__.py  agent.py
triad/prompts/: __init__.py  arbiter.md  architect.md  debate_final.md  debate_judge.md  debate_propose.md  debate_rebuttal.md  evaluate_suggestion.md  implementer.md  implementer_apply.md  improve_cross_review.md  improve_generate.md  improve_synthesize.md  parallel_completion.md  parallel_generate.md  parallel_review.md  parallel_synthesis_retry.md  parallel_synthesize.md  planner.md  planner_questions.md  reconciler.md  refactorer.md  refactorer_apply.md  review_analyze.md  review_cross_review.md  review_diff.md  review_synthesize.md  tiebreak.md  verifier.md
triad/providers/: __init__.py  base.py  litellm_provider.py  registry.py
triad/routing/: __init__.py  engine.py  strategies.py
triad/schemas/: __init__.py  apply.py  arbiter.py  ci.py  consensus.py  context.py  messages.py  pipeline.py  planner.py  reconciliation.py  routing.py  session.py  streaming.py
