[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crtx"
version = "0.1.0"
description = "Multi-model AI development intelligence — learns your codebase, gets smarter every session"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "TriadAI" },
]
keywords = ["ai", "llm", "multi-model", "pipeline", "arbiter", "code-generation", "brain", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "litellm>=1.55",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "aiosqlite>=0.20",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://crtx.dev"
Repository = "https://github.com/triad-ai/crtx"

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
crtx = "triad.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["triad"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"triad/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
