[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crtx"
version = "0.1.0"
description = "Multi-model AI orchestration platform. Plugin any LLM. Ship better code."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "TriadAI" },
]
keywords = ["ai", "llm", "multi-model", "pipeline", "arbiter", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "litellm>=1.55",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "aiosqlite>=0.20",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://crtx.dev"
Repository = "https://github.com/triad-ai/crtx"

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
crtx = "triad.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["triad"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
ignore = [
    "SIM102",   # nested if — combining reduces readability in filter/match patterns
    "SIM105",   # contextlib.suppress — try/except/pass is clearer for one-liners
    "SIM108",   # ternary — multi-line if/else is clearer for formatted strings
    "SIM117",   # nested with — 3-deep context managers don't flatten well
    "S603",     # subprocess call — args are controlled, not user input
    "S607",     # partial executable path — git/uvicorn are standard PATH tools
    "S108",     # /tmp hardcoded — false positive on temp path references
    "S110",     # try-except-pass — intentional best-effort (chmod, etc.)
    "S310",     # URL audit — URLs come from config, not user input
    "S104",     # bind 0.0.0.0 — intentional for local dashboard server
    "S105",     # hardcoded password — false positive on enum value names
    "S608",     # SQL injection — query uses parameterized ? placeholders
    "S701",     # Jinja2 autoescape — templates are Markdown prompts, not HTML
]

[tool.ruff.lint.per-file-ignores]
"triad/cli.py" = ["B008"]
"triad/orchestrator.py" = ["N806"]                          # _MAX_SYNTH_RETRIES constant in function
"triad/providers/litellm_provider.py" = ["E402", "N806"]    # imports after suppress_debug_info, _FILEPATH_ONLY
"tests/**" = ["S101"]                                       # assert is the whole point of tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
