[tool.poetry]
name = "triad"
version = "0.1.0"
description = "A simple status checking tool."
authors = ["AI Architect"]
readme = "README.md"
packages = [{include = "triad", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["rich"], version = "^0.9.0"}
pydantic = "^2.5.0"

[tool.poetry.scripts]
triad = "triad.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"